refactor: modularize application and web UI